force-app/main/default/objects/Policy__c/fields/Actual_GWP__c.field-meta.xml
<CustomField>
    <fullName>Actual_GWP__c</fullName>
    <formula>Gross_Written_Premium__c - VG_Brokerage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>