force-app/main/default/objects/Policy__c/fields/Am_I_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Am_I_Underwriter__c</fullName>
    <formula>IF( Underwriter__c = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Am I Underwriter</label>
    <type>Text</type>
</CustomField>