force-app/main/default/objects/Policy__c/fields/AP_TP__c.field-meta.xml
<CustomField>
    <fullName>AP_TP__c</fullName>
    <formula>Gross_Written_Premium__c /  Technical_UW_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP/TP (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>