force-app/main/default/objects/Policy__c/fields/Bound_Probability__c.field-meta.xml
<CustomField>
    <fullName>Bound_Probability__c</fullName>
    <formula>ISPICKVAL(Policy_Status__c ,&quot;Booked&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bound Probability</label>
    <type>Checkbox</type>
</CustomField>