force-app/main/default/objects/Policy__c/fields/Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Search Field that Searches the contacts for the given broker.</description>
    <label>Broker Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Broker_Name__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>