force-app/main/default/objects/Policy__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Broker Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2) AND 3 AND 4) OR 5</booleanFilter>
        <errorMessage>Please select an approved broker or sub-broker</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Sub-Broker</value>
        </filterItems>
        <filterItems>
            <field>Account.VG_TOBA_Uploaded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Regulatory_Check__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Policy_Status__c</field>
            <operation>equals</operation>
            <value>NTU/Decline</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Broker)</relationshipLabel>
    <relationshipName>Policies_Broker</relationshipName>
    <type>Lookup</type>
</CustomField>