force-app/main/default/objects/Policy__c/fields/Commercial_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Adjustment__c</fullName>
    <label>Commercial Adjustment</label>
    <summarizedField>Policy_Schedule__c.Premium_Adjustment_2__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Schedule__c.VG_Co_Insurance_type__c</field>
        <operation>notEqual</operation>
        <value>Child</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Schedule__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>