force-app/main/default/objects/Policy__c/fields/Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Type__c</fullName>
    <label>Declaration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As &amp; When</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>