force-app/main/default/objects/Policy__c/fields/Deductible_or_Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_or_Excess_Amount__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>