force-app/main/default/objects/Policy__c/fields/Deductible_or_Excess_Basis__c.field-meta.xml
<CustomField>
    <fullName>Deductible_or_Excess_Basis__c</fullName>
    <label>Deductible or Excess Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Any one accident or occurrence</fullName>
            </value>
            <value>
                <fullName>In aggregate</fullName>
            </value>
            <value>
                <fullName>Any one claim</fullName>
            </value>
            <value>
                <fullName>Any one event</fullName>
            </value>
            <value>
                <fullName>Any one interest</fullName>
            </value>
            <value>
                <fullName>Any one loss</fullName>
            </value>
            <value>
                <fullName>Any one person, passenger or patient</fullName>
            </value>
            <value>
                <fullName>Combines single limit any one loss</fullName>
            </value>
            <value>
                <fullName>Combined single limit</fullName>
            </value>
            <value>
                <fullName>Each and every loss</fullName>
            </value>
            <value>
                <fullName>Each and every interest</fullName>
            </value>
            <value>
                <fullName>In aggregate, costs inclusive</fullName>
            </value>
            <value>
                <fullName>In aggregate, costs in addition</fullName>
            </value>
            <value>
                <fullName>Any one claim, costs inclusive</fullName>
            </value>
            <value>
                <fullName>Any one claim, costs in addition</fullName>
            </value>
            <value>
                <fullName>Any one loss, costs inclusive</fullName>
            </value>
            <value>
                <fullName>Any one loss, costs in addition</fullName>
            </value>
            <value>
                <fullName>Combined single limit, any one loss, costs inclusive</fullName>
            </value>
            <value>
                <fullName>Combined single limit, any one loss, costs in addition</fullName>
            </value>
            <value>
                <fullName>Combined single limit, costs inclusive</fullName>
            </value>
            <value>
                <fullName>Combined single limit, costs in addition</fullName>
            </value>
            <value>
                <fullName>Each and every loss, costs inclusive</fullName>
            </value>
            <value>
                <fullName>Each and every loss, costs in addition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>