force-app/main/default/objects/Policy__c/fields/Earned_Aggregate_Balance__c.field-meta.xml
<CustomField>
    <fullName>Earned_Aggregate_Balance__c</fullName>
    <formula>( VG_Aggregate_Limit__c *( TODAY() - VG_Inception_Date__c )/ (VG_Expiry_Date__c - VG_Inception_Date__c ))- Total_claims_reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Aggregate Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>