force-app/main/default/objects/Policy__c/fields/Extended_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Extended_Reporting__c</fullName>
    <label>Extended Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>