force-app/main/default/objects/Policy__c/fields/Formula_Sum_Insured_Share__c.field-meta.xml
<CustomField>
    <fullName>Formula_Sum_Insured_Share__c</fullName>
    <formula>Total_Sum_Insured__c * Sum_Insured_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Insured Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>