force-app/main/default/objects/Policy__c/fields/Gross_Written_Premium__c.field-meta.xml
<CustomField>
    <fullName>Gross_Written_Premium__c</fullName>
    <formula>IF( ISPICKVAL( Policy_Status__c , &quot;Prospect&quot;), VG_Prospect_Premium__c , Gross_Written_Premium_Rollup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Written Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>