force-app/main/default/objects/Policy__c/fields/Gross_Written_Premium_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Gross_Written_Premium_Rollup__c</fullName>
    <label>Gross Written Premium (Hidden)</label>
    <summarizedField>Policy_Schedule__c.Gross_Written_Premium__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Schedule__c.VG_Co_Insurance_type__c</field>
        <operation>notEqual</operation>
        <value>Child</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Schedule__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>