force-app/main/default/objects/Policy__c/fields/GWP_Predicted__c.field-meta.xml
<CustomField>
    <fullName>GWP_Predicted__c</fullName>
    <label>GWP Predicted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>