force-app/main/default/objects/Policy__c/fields/Inception_Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>Inception_Expiry_Time__c</fullName>
    <defaultValue>&quot;00:01&quot;</defaultValue>
    <inlineHelpText>Enter time in 24 hour format eg 14:40</inlineHelpText>
    <label>Inception Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>