force-app/main/default/objects/Policy__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Insured)</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>