force-app/main/default/objects/Policy__c/fields/IsApproved_External__c.field-meta.xml
<CustomField>
    <fullName>IsApproved_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApproved External</label>
    <type>Checkbox</type>
</CustomField>