force-app/main/default/objects/Policy__c/fields/Lead_insurer_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_insurer_Policy_No__c</fullName>
    <label>Lead insurer Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>