force-app/main/default/objects/Policy__c/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Class of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Casualty</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Financial Lines</fullName>
            </value>
            <value>
                <fullName>Motor Fleet</fullName>
            </value>
            <value>
                <fullName>L&amp;S</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Commercial Combined</fullName>
            </value>
            <value>
                <fullName>MOTOR-ULR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>