force-app/main/default/objects/Policy__c/fields/Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Loss_Ratio__c</fullName>
    <formula>Total_claims_reserve__c / Actual_GWP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>