force-app/main/default/objects/Policy__c/fields/MTA_Cancel_List__c.field-meta.xml
<CustomField>
    <fullName>MTA_Cancel_List__c</fullName>
    <label>MTA_Cancel_List</label>
    <summaryFilterItems>
        <field>Policy_Schedule__c.VG_MTA_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Schedule__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>