force-app/main/default/objects/Policy__c/fields/NTU_Or_Declined__c.field-meta.xml
<CustomField>
    <fullName>NTU_Or_Declined__c</fullName>
    <label>NTU Or Declined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>