force-app/main/default/objects/Policy__c/fields/NTU_Score__c.field-meta.xml
<CustomField>
    <fullName>NTU_Score__c</fullName>
    <label>NTU_Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>