force-app/main/default/objects/Policy__c/fields/NTUorDeclined__c.field-meta.xml
<CustomField>
    <fullName>NTUorDeclined__c</fullName>
    <description>checkbox to see if the policy is NTU/Declined</description>
    <formula>ISPICKVAL(Policy_Status__c ,&quot;NTU/Decline&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>to be used in the einstein prediction</inlineHelpText>
    <label>NTU or Declined Check</label>
    <type>Checkbox</type>
</CustomField>