force-app/main/default/objects/Policy__c/fields/Paid_Aggregate_Balance__c.field-meta.xml
<CustomField>
    <fullName>Paid_Aggregate_Balance__c</fullName>
    <formula>VG_Aggregate_Limit__c - Total_claims_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Aggregate Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>