force-app/main/default/objects/Policy__c/fields/Policy_Basis__c.field-meta.xml
<CustomField>
    <fullName>Policy_Basis__c</fullName>
    <label>Policy Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claims Made</fullName>
            </value>
            <value>
                <fullName>Claims Occurred</fullName>
            </value>
            <value>
                <fullName>Risk Attaching</fullName>
            </value>
            <value>
                <fullName>Risks Attaching During (RAD)</fullName>
            </value>
            <value>
                <fullName>Losses Occurring During (LOD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>