force-app/main/default/objects/Policy__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>NTU/Decline</fullName>
            </value>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
                <isActive>false</isActive>
                <label>Additional Information Required</label>
            </value>
            <value>
                <fullName>Awaiting Submission</fullName>
                <isActive>false</isActive>
                <label>Awaiting Submission</label>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Final Terms Quoted After Negotiations</fullName>
                <isActive>false</isActive>
                <label>Final Terms Quoted After Negotiations</label>
            </value>
            <value>
                <fullName>NTU - Capacity</fullName>
                <isActive>false</isActive>
                <label>NTU - Capacity</label>
            </value>
            <value>
                <fullName>NTU - Other</fullName>
                <isActive>false</isActive>
                <label>NTU - Other</label>
            </value>
            <value>
                <fullName>NTU - Price</fullName>
                <isActive>false</isActive>
                <label>NTU - Price</label>
            </value>
            <value>
                <fullName>NTU - Service</fullName>
                <isActive>false</isActive>
                <label>NTU - Service</label>
            </value>
            <value>
                <fullName>NTU - Terms</fullName>
                <isActive>false</isActive>
                <label>NTU - Terms</label>
            </value>
            <value>
                <fullName>Referral Approval</fullName>
                <isActive>false</isActive>
                <label>Referral Approval</label>
            </value>
            <value>
                <fullName>Submission Received</fullName>
                <isActive>false</isActive>
                <label>Submission Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>