force-app/main/default/objects/Policy__c/fields/Referral_Required__c.field-meta.xml
<CustomField>
    <fullName>Referral_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Required</label>
    <type>Checkbox</type>
</CustomField>