force-app/main/default/objects/Policy__c/fields/Risk_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Assessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Risk Assessor)</relationshipLabel>
    <relationshipName>Policies_Risk_Assessor</relationshipName>
    <type>Lookup</type>
</CustomField>