force-app/main/default/objects/Policy__c/fields/Sum_Insured_Share__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured_Share__c</fullName>
    <label>Sum Insured Share (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>