force-app/main/default/objects/Policy__c/fields/Technical_UW_Premium__c.field-meta.xml
<CustomField>
    <fullName>Technical_UW_Premium__c</fullName>
    <label>Technical UW Premium</label>
    <summarizedField>Policy_Schedule__c.Technical_UW_Premium__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Schedule__c.VG_Co_Insurance_type__c</field>
        <operation>notEqual</operation>
        <value>Child</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Schedule__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>