force-app/main/default/objects/Policy__c/fields/Terms_of_Trade_Days__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Trade_Days__c</fullName>
    <label>Terms of Trade (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>