force-app/main/default/objects/Policy__c/fields/Total_Aggregate_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Aggregate_Balance__c</fullName>
    <formula>VG_Aggregate_Limit__c - Total_claims_reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Aggregate Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>