force-app/main/default/objects/Policy__c/fields/Total_claims_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_claims_paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Claims Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>