force-app/main/default/objects/Policy__c/fields/Total_claims_reserve__c.field-meta.xml
<CustomField>
    <fullName>Total_claims_reserve__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Claims Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>