force-app/main/default/objects/Policy__c/fields/Total_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Insured__c</fullName>
    <label>Total Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>